refactor for trace module